Pie chart from xhr/json or array.

--- a/demo/index.html
+++ b/demo/index.html
@@ -21,7 +21,8 @@
       <demo-snippet>
         <template>
           <!--<svg is="plutonium-pie-chart" width="600" height="300"></svg>-->
-          <plutonium-pie-chart width="600" height="300" data-url="./data.json"></plutonium-pie-chart>
+          <plutonium-pie-chart width="300" height="300" attr-for-label="age" attr-for-selected="population" data-url="./data.json"></plutonium-pie-chart>
+          <plutonium-pie-chart width="300" height="300" attr-for-label="name" attr-for-selected="population" data='[{"name": "k","age": 100001,"population": 40000 }, {"name": "kasdjaksdasdasdadj", "age": 20, "population": 80000}, {"name": "kasdja", "age": 30, "population": 120000}]'></plutonium-pie-chart>
           <!--<svg is="plutonium-pie-chart" width="600" height="300" data-url="./data.json"></svg>-->
         </template>
       </demo-snippet>
