--- a/plutonium-pie-chart.html
+++ b/plutonium-pie-chart.html
@@ -8,7 +8,9 @@
                 display: block;
             }
         </style>
-        <svg id="canvas"></svg>
+        <svg id="canvas">
+        <g id="transformer"></g>
+        </svg>
     </template>
     <script>
         Polymer({
@@ -38,6 +40,16 @@
                     type: Object,
                     notify: true
                 },
+                attrForSelected: {
+                    type: String,
+                    notify: true,
+                    value: 'value'
+                },
+                attrForLabel: {
+                    type: String,
+                    notify: true,
+                    value: 'name'
+                },
                 items: {
                     type: Array,
                     notify: true,
@@ -66,128 +78,79 @@
                 }
             },
             observers: [
-//                'observeArc(_radius)',
-//                'observeData(data)',
-//                'observeDataUrl(dataUrl)'
+                'observeSize(width, height)',
+                'observeItems(items)',
+                'observeDataUrl(attrForLabel, _pie, dataUrl)',
+                'observeData(attrForLabel, _pie, data)',
+                'observeLayout(attrForSelected)'
             ],
-            ready: function () {
-                console.log('Ready');
-
-
-                var width = 960,
-                        height = 500,
-                        radius = Math.min(width, height) / 2;
-
-                var color = d3.scale.ordinal()
-                        .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
-
-                var arc = d3.svg.arc()
-                        .outerRadius(radius - 10)
-                        .innerRadius(0);
-
-                var labelArc = d3.svg.arc()
-                        .outerRadius(radius - 40)
-                        .innerRadius(radius - 40);
-
-                var pie = d3.layout.pie()
+            observeLayout: function (attrForSelected) {
+                var self = this;
+                // Pie visualization.
+                this._pie = d3.layout.pie()
                         .sort(null)
                         .value(function (d) {
-                            return d.population;
+                            return d[self.attrForSelected];
                         });
+            },
+            observeSize: function (width, height) {
+                // Calculate radius,
+                this._radius = Math.min(width, height) / 2;
+                // Create arc function
+                this._arc = d3.svg.arc().outerRadius(this._radius - 10).innerRadius(0);
+                // reate arc function for labels
+                this._labelArc = d3.svg.arc().outerRadius(this._radius - 40).innerRadius(this._radius - 40);
+                // Synchronize svg size.
+                d3.select(this.$.canvas).attr("width", width).attr("height", height)
+                // Translate graphics into content. 
+                d3.select(this.$.transformer).attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
 
-//                var svg = this
-//                var svg = d3.select("#canvas")
-                var svg = d3.select(this.$.canvas)
-//                var svg = d3.select(this).append("svg")
-//                var svg = d3.select("svg")
-                        .attr("width", width)
-                        .attr("height", height)
-                        .append("g")
-                        .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+            },
+            observeItems: function (items) {
+                // Create color palette for the items.
+                this._palette = d3.scale.ordinal().range(items);
+            },
+            observeDataUrl: function (attrForLabel, _pie, dataUrl) {
+                var self = this;
 
-                d3.json("data.json", function (error, data) {
+                d3.json(dataUrl, function (error, data) {
                     if (error)
                         throw error;
-
-                    var g = svg.selectAll(".arc")
-                            .data(pie(data))
+                    var g = d3.select(self.$.transformer).selectAll(".arc")
+                            .data(self._pie(data))
                             .enter().append("g")
                             .attr("class", "arc");
 
-                    g.append("path")
-                            .attr("d", arc)
-                            .style("fill", function (d) {
-                                return color(d.data.age);
-                            });
+                    g.append("path").attr("d", self._arc).style("fill", function (d) {
+                        return self._palette(d.data[self.attrForLabel]);
+                    });
 
-                    g.append("text")
-                            .attr("transform", function (d) {
-                                return "translate(" + labelArc.centroid(d) + ")";
-                            })
-                            .attr("dy", ".35em")
-                            .text(function (d) {
-                                return d.data.age;
-                            });
+                    g.append("text").attr("transform", function (d) {
+                        return "translate(" + self._labelArc.centroid(d) + ")";
+                    }).attr("dy", ".35em").text(function (d) {
+                        return d.data[self.attrForLabel];
+                    });
+                });
+            },
+            observeData: function (attrForLabel, pie, data) {
+                var self = this;
+
+                var g = d3.select(self.$.transformer).selectAll(".arc")
+                        .data(self._pie(data))
+                        .enter().append("g")
+                        .attr("class", "arc");
+
+                g.append("path").attr("d", self._arc).style("fill", function (d) {
+                    return self._palette(d.data[self.attrForLabel]);
                 });
 
-                function type(d) {
-                    d.population = +d.population;
-                    return d;
-                }
+                g.append("text").attr("transform", function (d) {
+                    return "translate(" + self._labelArc.centroid(d) + ")";
+                }).attr("dy", ".35em").text(function (d) {
+                    return d.data[self.attrForLabel];
+                });
 
-//                this._pie = d3.layout.pie()
-//                        .sort(null)
-//                        .value(function (d) {
-//                            return d.population;
-//                        });
-            },
-//            computeRadius: function (width, height) {
-//                return Math.min(width, height) / 2;
-//            },
-//            observeArc: function (_radius) {
-//                this._arc = d3.svg.arc().outerRadius(this._radius - 10).innerRadius(0);
-//                this._labelArc = d3.svg.arc().outerRadius(this._radius - 40).innerRadius(this._radius - 40);
-////                console.log('Observe arc: ' + this._arc);
-////                console.log('Observe label-arc: ' + this._labelArc);
-//            },
-//            observeItems: function (items) {
-//                this._palette = d3.scale.ordinal().range(items);
-////                console.log('Observe items: ' + this.items);
-//            },
-//            observeDataUrl: function(dataUrl) {
-//                this.observeData(this.items);
-//            },
-//            observeData: function (items) {
-//                var self = this;
-//
-//                
-//                var type = function (d) {
-//                    d.population = +d.population;
-//                    return d;
-//                };
-//
-//                d3.json(this.dataUrl, function (error, data) {
-//                    if (error)
-//                        throw error;
-//
-////                    var g = Polymer.selectAll(".arc").data(pie(data)).enter().append("g").attr("class", "arc");
-////                    var g = Polymer.dom(self).querySelectorAll(".arc")
-//                    var g = Polymer.dom(self).querySelectorAll(".arc")
-//                            .data(self._pie(data)).enter().append("g").attr("class", "arc");
-//
-//                    g.append("path").attr("d", self._arc).style("fill", function (d) {
-//                        return color(d.data.age);
-//                    });
-//
-//                    g.append("text").attr("transform", function (d) {
-//                        return "translate(" + self._labelArc.centroid(d) + ")";
-//                    }).attr("dy", ".35em").text(function (d) {
-//                        return d.data.age;
-//                    });
-//                });
-//
-////                console.log('Observe data: ' + this.data);
-//            }
+            }
         });
     </script>
 </dom-module>
