--- a/demo/index.html
+++ b/demo/index.html
@@ -10,6 +10,7 @@
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
 
     <link rel="import" href="../plutonium-pie-chart.html">
+    <link rel="import" href="../plutonium-chart.html">
 
     <style is="custom-style" include="demo-pages-shared-styles">
     </style>
