--- a/plutonium-visualization.html
+++ b/plutonium-visualization.html
@@ -5,3 +5,4 @@
 
 <link rel="import" href="plutonium-visualization-json-model-behavior.html">
 <link rel="import" href="plutonium-visualization-object-model-behavior.html">
+<link rel="import" href="plutonium-visualization-presentation-behavior.html">
