--- a/plutonium-visualization.html
+++ b/plutonium-visualization.html
@@ -2,6 +2,7 @@
 
 <link rel="import" href="plutonium-pie-chart.html">
 <link rel="import" href="plutonium-chart.html">
+<link rel="import" href="plutonium-area-chart.html">
 
 <link rel="import" href="plutonium-visualization-json-model-behavior.html">
 <link rel="import" href="plutonium-visualization-object-model-behavior.html">
