--- a/plutonium-visualization-fetch-csv-behavior.html
+++ b/plutonium-visualization-fetch-csv-behavior.html
@@ -1,7 +1,5 @@
 <script src="../d3/d3.js"></script>
 
-<link rel="import" href="plutonium-visualization-fetching-behavior.html">
-
 <script>
     window.PlutoniumVisualization = window.PlutoniumVisualization || {};
     /**
@@ -9,7 +7,7 @@
      *
      * @polymerBehavior
      */
-    PlutoniumVisualization.CsvFetchingBehavior = {
+    PlutoniumVisualization.FetchCsvBehavior = {
         properties: {
             csv: {
                 type: String,
