--- a/plutonium-visualization-fetch-behavior.html
+++ b/plutonium-visualization-fetch-behavior.html
@@ -13,11 +13,6 @@
      */
     PlutoniumVisualization.FetchBehavior = {
         postProcess: function (data) {
-            var self = this;
-            data.forEach(function (d) {
-                d.date = self._parseDate(d.date);
-                d.close = +d.close;
-            });
             return data;
         }
     };
@@ -27,6 +22,7 @@
      * @polymerBehavior
      */
     PlutoniumVisualization.FetchUniversalBehavior = [
+        PlutoniumVisualization.FetchBehavior,
         PlutoniumVisualization.FetchCsvBehavior,
         PlutoniumVisualization.FetchJsonBehavior,
         PlutoniumVisualization.FetchTsvBehavior
