--- a/demo/index-plutonium-area-chart.html
+++ b/demo/index-plutonium-area-chart.html
@@ -17,7 +17,7 @@
     </head>
     <body>
 
-        <div class="vertical-section-container centered">
+        <div class="layout vertical vertical-section-container">
             <h3>Basic plutonium-chart Demo</h3>
             <demo-snippet>
                 <template>
