--- a/demo/index-plutonium-chart.html
+++ b/demo/index-plutonium-chart.html
@@ -21,8 +21,9 @@
       <demo-snippet>
         <template>
           <!--<svg is="plutonium-pie-chart" width="600" height="300"></svg>-->
-          <plutonium-chart width="300" height="300" attr-for-label="age" attr-for-selected="population" data-url="./data.json"></plutonium-chart>
+          <plutonium-chart width="300" height="300" attr-for-label="age" attr-for-selected="population" json="./plutonium-chart-data.json"></plutonium-chart>
           <plutonium-chart width="300" height="300" attr-for-label="name" attr-for-selected="population" data='[{"name": "k","age": 100001,"population": 40000 }, {"name": "kasdjaksdasdasdadj", "age": 20, "population": 80000}, {"name": "kasdja", "age": 30, "population": 120000}]'></plutonium-chart>
+          <plutonium-chart width="300" height="300" attr-for-label="name"></plutonium-chart>
           <!--<svg is="plutonium-pie-chart" width="600" height="300" data-url="./data.json"></svg>-->
         </template>
       </demo-snippet>
