--- a/demo/index-plutonium-chart.html
+++ b/demo/index-plutonium-chart.html
@@ -10,6 +10,9 @@
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
 
     <link rel="import" href="../plutonium-chart.html">
+    <link rel="import" href="../plutonium-vertical-axis.html">
+    <link rel="import" href="../plutonium-horizontal-axis.html">
+    <link rel="import" href="../plutonium-area-layout.html">
 
     <style is="custom-style" include="demo-pages-shared-styles">
     </style>
@@ -21,9 +24,15 @@
       <demo-snippet>
         <template>
           <!--<svg is="plutonium-pie-chart" width="600" height="300"></svg>-->
-          <plutonium-chart width="300" height="300" attr-for-label="age" attr-for-selected="population" json="./plutonium-chart-data.json"></plutonium-chart>
-          <plutonium-chart width="300" height="300" attr-for-label="name" attr-for-selected="population" data='[{"name": "k","age": 100001,"population": 40000 }, {"name": "kasdjaksdasdasdadj", "age": 20, "population": 80000}, {"name": "kasdja", "age": 30, "population": 120000}]'></plutonium-chart>
-          <plutonium-chart width="300" height="300" attr-for-label="name"></plutonium-chart>
+          <plutonium-chart id="chart0" width="300" height="300" attr-for-label="age" attr-for-selected="population" json="./plutonium-chart-data.json">
+              <plutonium-vertical-axis title="Price ($)" height="300"></plutonium-vertical-axis>
+              <plutonium-horizontal-axis title="Time of my life" width="300" height="300"></plutonium-horizontal-axis>
+              <plutonium-area-layout id="layout"></plutonium-area-layout>
+          </plutonium-chart>
+<!--          <plutonium-chart id="chart1" width="300" height="300" attr-for-label="name" attr-for-selected="population" value='[{"name": "k","age": 100001,"population": 40000 }, {"name": "kasdjaksdasdasdadj", "age": 20, "population": 80000}, {"name": "kasdja", "age": 30, "population": 120000}]'></plutonium-chart>
+          <plutonium-chart id="chart2" width="300" height="300" attr-for-label="name">
+              
+          </plutonium-chart>-->
           <!--<svg is="plutonium-pie-chart" width="600" height="300" data-url="./data.json"></svg>-->
         </template>
       </demo-snippet>
