--- a/plutonium-visualization-presentation-behavior.html
+++ b/plutonium-visualization-presentation-behavior.html
@@ -17,41 +17,63 @@
                 type: Number,
                 notify: true
             },
+            _margin: {
+                type: Object,
+                value: {top: 20, right: 20, bottom: 30, left: 50}
+            },
             _width: {
-                type: Number
+                type: Number,
+                notify: true
             },
             _height: {
-                type: Number
+                type: Number,
+                notify: true
             }
         },
         observers: [
-            'observeLayout(width, height)',
-            'observeValue(value)'
+            'observeWidth(width)',
+            'observeHeight(height)',
+            'observeLayout(_width, _height)'
         ],
         listeners: {
+            'pv-setup': 'setup',
             'pv-render': 'render'
         },
         attached: function () {
             console.log(this.is, 'attached.');
-            this.setup();
-        },
-        observeLayout: function (width, height) {
-            console.log(this.is, 'observe layout (', width, ',', height, ')');
+            this.fire('pv-setup', {});
+
+//            this.setup();
         },
         observeValue: function (value) {
             console.log(this.is, 'observe value.');
-            this.fire('pv-render', {
-            });
+            this.fire('pv-render', {});
         },
         setup: function () {
             console.log(this.is, 'setup.');
+            Polymer.dom(this).querySelector('#layout').setup();
         },
         render: function () {
             console.log(this.is, 'render.');
+            Polymer.dom(this).querySelector('#layout').render();
         },
         postProcess: function (data) {
             return JSON.stringify(data);
-        }
-
+        },
+        observeLayout: function (_width, _height) {
+            console.log(this.is, 'observe layout (', _width, ',', _height, ')');
+            d3.select(this.$.canvas)
+                    .attr("width", _width + this._margin.left + this._margin.right)
+                    .attr("height", _height + this._margin.top + this._margin.bottom);
+            d3.select(this.$.transformer)
+                    .attr("transform", "translate(" + this._margin.left + "," + this._margin.top + ")");
+            this.fire('pv-render', {});
+        },
+        observeWidth: function (width) {
+            this._width = width - this._margin.left - this._margin.right;
+        },
+        observeHeight: function (height) {
+            this._height = height - this._margin.top - this._margin.bottom;
+        },
     };
 </script>
