--- a/demo/index-plutonium-chart.html
+++ b/demo/index-plutonium-chart.html
@@ -27,7 +27,7 @@
           <plutonium-chart id="chart0" width="300" height="300" attr-for-label="age" attr-for-selected="population" json="./plutonium-chart-data.json">
               <plutonium-vertical-axis title="Price ($)" height="300"></plutonium-vertical-axis>
               <plutonium-horizontal-axis title="Time of my life" width="300" height="300"></plutonium-horizontal-axis>
-              <plutonium-area-layout id="layout"></plutonium-area-layout>
+              <!--<plutonium-area-layout id="layout"></plutonium-area-layout>-->
           </plutonium-chart>
 <!--          <plutonium-chart id="chart1" width="300" height="300" attr-for-label="name" attr-for-selected="population" value='[{"name": "k","age": 100001,"population": 40000 }, {"name": "kasdjaksdasdasdadj", "age": 20, "population": 80000}, {"name": "kasdja", "age": 30, "population": 120000}]'></plutonium-chart>
           <plutonium-chart id="chart2" width="300" height="300" attr-for-label="name">
