--- a/plutonium-area-chart.html
+++ b/plutonium-area-chart.html
@@ -1,11 +1,12 @@
 <link rel="import" href="../polymer/polymer.html">
 <script src="../d3/d3.js"></script>
 
+<link rel="import" href="plutonium-visualization-styles.html">
 <link rel="import" href="plutonium-visualization-fetch-behavior.html">
 
 <dom-module id="plutonium-area-chart">
     <template>
-        <style>
+        <style include="plutonium-visualization-styles">
             :host {
                 display: inline-block;
             }
